k8s/demo-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: demo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /app1
        backend:
          serviceName: node-app-1
          servicePort: 80
      - path: /app2
        backend:
          serviceName: node-app-2
          servicePort: 80
