k8s/ingress-config.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: name-virtual-host-ingress
spec:
  rules:
  - host: app1.akilan.com
    http:
      paths:
      - backend:
          serviceName: node-app-1
          servicePort: 80
  - host: app2.akilan.com
    http:
      paths:
      - backend:
          serviceName: node-app-2
          servicePort: 80
